# r2d

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  r2d.hpp  r2d_core.hpp  r2d_example.cpp  r2d_surface.hpp
examples/: CMakeLists.txt  aa_raster.cpp  example_app_sdl2.cpp  example_app_sdl2.h  polygon.cpp
